# CoreSupportApi

./: .gitignore  pyproject.toml  readme.md  sftp-config.json
backend/: Dockerfile  test-prod.yml
backend/api/: manage.py
backend/api/api/: private.key  public.key  urls.py  utils.py  wsgi.py
backend/api/authentication/: models.py  serializers.py  utils.py  views.py
backend/api/subscriber_data_collector/: apps.py  asgi.py  check_subscriber.py  constants.py  error_handler.py  models.py  networks.py  serializers.py  urls.py  views.py
backend/conf/: conf.py
backend/notebooks/: Criptografia.ipynb  HttpRequests.ipynb  ProjectSettings.ipynb  Users.ipynb
backend/notebooks/.ipynb_checkpoints/: Criptografia-checkpoint.ipynb  HttpRequests-checkpoint.ipynb  ProjectSettings-checkpoint.ipynb  Users-checkpoint.ipynb
backend/uwsgi/: apt.conf  requirements.txt  static.sh  uwsgi.ini
bat-files/: all.bat  angular-jupyter.bat  angular.bat  django.bat  jupyter.bat
docker/: .env  Dockerfile  apt.conf  base.yml  gunicorn_conf.py  jupyter_notebook_config.py  nginx-custom.conf  nginx.conf  plantillaweb.service  prod.yml  produccion.md  test.yml
docker/requirements/: base.txt  prod.txt  test.txt
documentacion/especificaciones-funcionales/: autenticacion.md  interfaz-usuario.md  readme.md  seguridad.md
documentacion/instalacion-configuracion/: Produccion.md  configuracion.md  instalacion.md  readme.md  validacion.md
documentacion/operacion-mantenimiento/: arquitectura.md  readme.md
frontend/: README.md  angular.json  package.json
frontend/src/: index.html  styles.css
(+67 files in other folders)
